# rust-fixed-point-decimal

./: .gitignore  Cargo.toml  README.md
benchmarks/order/: Cargo.toml
benchmarks/order/benches/: f64_bench.rs  fpd_bench.rs  rdec_bench.rs
benchmarks/order/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  parser.rs  powers_of_ten.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: tests_macros.rs
src/: errors.rs  format.rs  from_decimal.rs  from_float.rs  from_int.rs  from_str.rs  lib.rs  powers_of_ten.rs  rounding.rs  unops.rs
src/binops/: add_sub.rs  checked_add_sub.rs  checked_div.rs  checked_mul.rs  checked_rem.rs  cmp.rs  div.rs  div_rounded.rs  mod.rs  mul.rs  mul_rounded.rs  rem.rs
tests/: test_calc_order.rs  test_cmp.rs  tests_macros.rs
