[package]
name = "rust-fixed-point-decimal"
version = "0.1.2"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Decimal fixed-point arithmetic."
readme = "README.md"
homepage = "https://github.com/mamrhein/rust-fixed-point-decimal"
repository = "https://github.com/mamrhein/rust-fixed-point-decimal"
documentation = "https://docs.rs/rust-fixed-point-decimal/"
license-file = "LICENSE.TXT"
keywords = ["number", "decimal", "fixed-point", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
rust-fixed-point-decimal-core = { path = "./core", version = "0.1.0" }
rust-fixed-point-decimal-macros = { path = "./macros", version = "0.1.0" }
num = "0.4"

[workspace]
members = [".", "./core", "./macros"]
