[package]
name = "rust-fixed-point-decimal-core"
version = "0.1.1"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Common constants and functions."
readme = "../README.md"
homepage = "https://github.com/mamrhein/rust-fixed-point-decimal"
repository = "https://github.com/mamrhein/rust-fixed-point-decimal"
license-file = "../LICENSE.TXT"
keywords = ["number", "decimal", "fixed-point", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
