[package]
name = "rust-fixed-point-decimal-macros"
version = "0.1.0"
edition = "2021"
authors = ["Michael Amrhein <michael@adrhinum.de>"]
description = "Macros used to ease instantiation of Decimal numbers."
readme = "../README.md"
homepage = "https://github.com/mamrhein/rust-fixed-point-decimal"
repository = "https://github.com/mamrhein/rust-fixed-point-decimal"
license-file = "../LICENSE.TXT"
keywords = ["number", "decimal", "fixed-point", "arithmetics"]
categories = ["data-structures", "mathematics"]

[dependencies]
rust-fixed-point-decimal-core = { path = "../core", version = "0.1.0" }
quote = "1.0"

[lib]
proc-macro = true
